--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,10 @@ server:
 ---
 
 spring:
-  profiles: dev
+  config:
+    activate:
+      on-profile:
+      - dev
   
 server:
   port: 8080
@@ -19,7 +22,10 @@ server:
 ---
 
 spring:
-  profiles: prod
+  config:
+    activate:
+      on-profile:
+      - prod
   
 server:
   port: 8081
